# tracepp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  callbacks.cpp  tracer.hpp  util_cuda.hpp  util_cupti.hpp
examples/vectorAdd/: vectorAdd.cu
lib/: CMakeLists.txt
lib/include/: callbacks.hpp  tracer.hpp  util_cuda.hpp  util_cupti.hpp
lib/src/: callbacks.cpp  loader.cpp
src/: entry.cpp  util_cuda.hpp
